force-app/main/default/objects/Service_Package_Item__c/Service_Package_Item__c.object-meta.xml
<CustomObject>
    <description>Service package line items are details of service packages ,describe of every particular service. 

Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Service Package Item</label>
    <nameField>
        <displayFormat>SPI - {0000}</displayFormat>
        <label>Service Package Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>