force-app/main/default/objects/Service_Package_Item__c/fields/DiscountAmounts__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmounts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Discount Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>