force-app/main/default/objects/Service_Package_Item__c/fields/DiscountRates__c.field-meta.xml
<CustomField>
    <fullName>DiscountRates__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Discount Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>