force-app/main/default/objects/Service_Package_Item__c/fields/DuplicatedUse__c.field-meta.xml
<CustomField>
    <fullName>DuplicatedUse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Duplicated Use</label>
    <type>Checkbox</type>
</CustomField>