force-app/main/default/objects/Service_Package_Item__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>