force-app/main/default/objects/Service_Package_Item__c/fields/fm_TotalHours__c.field-meta.xml
<CustomField>
    <fullName>fm_TotalHours__c</fullName>
    <description>This field will show the total hours for Labor and Additional Services record types.</description>
    <formula>Hour__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>