force-app/main/default/objects/Service_Package_Item__c/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <description>Created By Mayank. This field will show the labour hours from the master product record.</description>
    <formula>Product__r.Hours__c * value((text(Number_of_Times__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>