force-app/main/default/objects/Service_Package_Item__c/fields/Labor_Type_Rate__c.field-meta.xml
<CustomField>
    <fullName>Labor_Type_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor Type Rate</label>
    <referenceTo>LaborTypeRate__c</referenceTo>
    <relationshipLabel>Service Package Items</relationshipLabel>
    <relationshipName>Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>