force-app/main/default/objects/Service_Package_Item__c/fields/LineItemType__c.field-meta.xml
<CustomField>
    <fullName>LineItemType__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Additional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>