force-app/main/default/objects/Service_Package_Item__c/fields/MOD_DT__c.field-meta.xml
<CustomField>
    <fullName>MOD_DT__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>LAST MODIFIED DATE</label>
    <type>DateTime</type>
</CustomField>