force-app/main/default/objects/Service_Package_Item__c/fields/Number_of_Times__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Number of Times</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>