force-app/main/default/objects/Service_Package_Item__c/fields/ODMT_TYP__c.field-meta.xml
<CustomField>
    <fullName>ODMT_TYP__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Distance Driven Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>