force-app/main/default/objects/Service_Package_Item__c/fields/ODOMETER_LIMIT_TO__c.field-meta.xml
<CustomField>
    <fullName>ODOMETER_LIMIT_TO__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>ODOMETER LIMIT - TO</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>