force-app/main/default/objects/Service_Package_Item__c/fields/PART_NO__c.field-meta.xml
<CustomField>
    <fullName>PART_NO__c</fullName>
    <label>Part No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>