force-app/main/default/objects/Service_Package_Item__c/fields/Repair_Package_Item__c.field-meta.xml
<CustomField>
    <fullName>Repair_Package_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Package Item</label>
    <referenceTo>RepairPackageItem__c</referenceTo>
    <relationshipLabel>Service Package Items</relationshipLabel>
    <relationshipName>Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>