force-app/main/default/objects/Service_Package_Item__c/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 11/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Service Package</label>
    <referenceTo>Service_Package__c</referenceTo>
    <relationshipLabel>Service Package Items</relationshipLabel>
    <relationshipName>Service_package</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>