force-app/main/default/objects/Service_Package_Item__c/fields/SpiTotal_Cost__c.field-meta.xml
<CustomField>
    <fullName>SpiTotal_Cost__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <formula>SpiTotalUnitPrice__c  +  SpiTotal_Tax__c</formula>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>