force-app/main/default/objects/Service_Package_Item__c/fields/spiValidity__c.field-meta.xml
<CustomField>
    <fullName>spiValidity__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Validity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>4 Year</fullName>
            </value>
            <value>
                <fullName>5 year</fullName>
            </value>
            <value>
                <fullName>6 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>