force-app/main/default/objects/Service_Package_Item__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>