force-app/main/default/objects/Service_Package_Item__c/fields/SVC_OP_CD__c.field-meta.xml
<CustomField>
    <fullName>SVC_OP_CD__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>FREE SERVICE OP CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>