force-app/main/default/objects/Service_Package_Item__c/fields/Total_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Cost__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 17th Nov 2020
Purpose: This field will show the total cost of the line item after discount.</description>
    <formula>SpiTotalUnitPrice__c + SpiTotal_Tax__c - DiscountAmounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>